[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/BulletPicker.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Presets/d12.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Presets/d10.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Presets/d20.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Presets/d6.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Presets/d4.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Presets/d8.tscn" type="PackedScene" id=7]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1 )

[node name="BulletPicker" type="Spatial"]
script = ExtResource( 1 )

[node name="GroundPlane" type="MeshInstance" parent="."]
transform = Transform( 37.3473, 0, 0, 0, 37.3473, 0, 0, 0, 37.3473, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="GroundPlane"]

[node name="CollisionShape" type="CollisionShape" parent="GroundPlane/StaticBody"]
shape = SubResource( 2 )

[node name="GroundPlane2" type="MeshInstance" parent="."]
transform = Transform( 37.3473, 0, 0, 0, 37.3473, 0, 0, 0, 37.3473, 0, -11, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="GroundPlane2"]

[node name="CollisionShape" type="CollisionShape" parent="GroundPlane2/StaticBody"]
shape = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.574848, 0.81826, 0, -0.81826, 0.574848, 0, 7.78604, 4.4945 )
near = 0.01
far = 8192.0

[node name="DicePool" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )

[node name="D4Pool" type="Spatial" parent="DicePool"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12861, 10, 0.852353 )

[node name="d4_1" parent="DicePool/D4Pool" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, -3.13091 )

[node name="d4_2" parent="DicePool/D4Pool" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 3.16672 )

[node name="d4_3" parent="DicePool/D4Pool" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )

[node name="D6Pool" type="Spatial" parent="DicePool"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.92271 )

[node name="d6_1" parent="DicePool/D6Pool" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.69322 )

[node name="d6_2" parent="DicePool/D6Pool" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.78464 )

[node name="d6_3" parent="DicePool/D6Pool" instance=ExtResource( 5 )]

[node name="D8Pool" type="Spatial" parent="DicePool"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.36158 )

[node name="d8_1" parent="DicePool/D8Pool" instance=ExtResource( 7 )]

[node name="d8_2" parent="DicePool/D8Pool" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.33079 )

[node name="d8_3" parent="DicePool/D8Pool" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.65471 )

[node name="D10Pool" type="Spatial" parent="DicePool"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.67602, 0, -4.72142 )

[node name="d10_1" parent="DicePool/D10Pool" instance=ExtResource( 3 )]

[node name="d10_2" parent="DicePool/D10Pool" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.3891 )

[node name="D12Pool" type="Spatial" parent="DicePool"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.10394, 0, 3.53091 )

[node name="d12_1" parent="DicePool/D12Pool" instance=ExtResource( 2 )]

[node name="d12_2" parent="DicePool/D12Pool" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.6385 )

[node name="D20Pool" type="Spatial" parent="DicePool"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.518047 )

[node name="d20_1" parent="DicePool/D20Pool" instance=ExtResource( 4 )]

[node name="DiePos1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 1, 0 )

[node name="DiePos2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="DiePos3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 1, 0 )
